# Rag-Pipeline

./: .Dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
src/: Ingestion_pipeline.py  data.py  retriever.py
src/Data/: data.py
src/app/: Rag.db  app.py  database.py  inference.py  main.py  prompt_temp.py
