[project]
name = "end-to-end-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.9.0",
    "bs4>=0.0.2",
    "chromadb>=1.0.15",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "fastembed>=0.7.1",
    "langchain[google-genai]>=0.3.26",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.8",
    "langchain-huggingface>=0.3.1",
    "markdown>=3.8.2",
    "opik>=1.8.8",
    "pydantic>=2.11.7",
    "pypdf>=5.8.0",
    "ragas>=0.3.0",
    "requests>=2.32.4",
    "sentence-transformers>=5.0.0",
    "torch>=2.7.1",
    "transformers>=4.53.3",
    "uvicorn>=0.35.0",
    "prefect>=3.4.10",
    "oxenai>=0.36.1",
    "sqlalchemy>=2.0.41",
]
